--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
 	"description": "boilerplate",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"watch": "nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
 		"cors": "^2.8.1",
 		"body-parser": "^1.15.2",
 		"chai": "^3.5.0",
-		"mongodb": "^2.2.16",
+		"mongodb": "^3.2.3",
 		"chai-http": "^3.0.0",
 		"mocha": "^3.2.0",
 		"zombie": "^5.0.5",
